# google-lightspeed-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Containerfile  Containerfile.marketplace-handler  EXTERNAL_SERVICES.md  Makefile  README.md  cloudbuild.yaml  pyproject.toml  renovate.json  requirements-agent.txt  requirements-dev.txt  requirements-handler.txt
.github/workflows/: ci.yml
.tekton/: google-lightspeed-agent-pull-request.yaml  google-lightspeed-agent-push.yaml  google-marketplace-handler-pull-request.yaml  google-marketplace-handler-push.yaml
adk-skills-workspace/evals/: evals.json
adk-skills-workspace/iteration-1/: benchmark.json  review.html
adk-skills-workspace/iteration-1/eval-1-counting-multistep/: eval_metadata.json
adk-skills-workspace/iteration-1/eval-2-pagination-formatting/: eval_metadata.json
adk-skills-workspace/iteration-1/eval-3-guardrails-injection/: eval_metadata.json
adk-skills-workspace/iteration-2/: benchmark.json  feedback.json  review.html
adk-skills-workspace/iteration-2/eval-1-counting-multistep/: eval_metadata.json
adk-skills-workspace/iteration-2/eval-2-pagination-formatting/: eval_metadata.json
adk-skills-workspace/iteration-2/eval-3-guardrails-injection/: eval_metadata.json
adk-skills-workspace/iteration-3/: benchmark.json  benchmark.md  feedback.json  review.html
adk-skills-workspace/iteration-3/eval-1-counting-multistep/: eval_metadata.json
adk-skills-workspace/iteration-3/eval-2-pagination-formatting/: eval_metadata.json
adk-skills-workspace/iteration-3/eval-3-guardrails-injection/: eval_metadata.json
adk-skills-workspace/iteration-3/eval-4-a2ui-rendering/: eval_metadata.json
adk-skills-workspace/iteration-3/eval-4-multi-severity-cves/: eval_metadata.json
adk-skills-workspace/iteration-4/: benchmark.json  review.html
adk-skills-workspace/iteration-5/: benchmark.json  review.html
deploy/cloudrun/: README.md  cleanup.sh  deploy-cloudbuild.sh  deploy.sh  marketplace-handler.yaml  otel-collector-config.yaml  service.yaml  setup-lb.sh  setup.sh
deploy/cloudrun/dashboards/: agent-operations.json  (+2 more)
deploy/gitops/: README.md
deploy/openshift/: Chart.yaml  README.md  secrets.yaml.example  values.yaml
deploy/podman/: lightspeed-agent-configmap.yaml  lightspeed-agent-secret.yaml  marketplace-handler-pod.yaml  redis-pod.yaml
docs/: a2ui.md  api.md  architecture.md  authentication-flow.md  authentication.md  configuration.md  index.md  marketplace.md  metering.md  network-diagram.md  rate-limiting.md  telemetry.md  troubleshooting.md
scripts/: seed_dcr_clients.py  test_a2a_auth.py  test_dcr.py  test_deployed_dcr.py
src/lightspeed_agent/: main.py
tests/: conftest.py  test_a2a.py  test_a2ui.py  test_audit_logging.py  test_auth.py  test_auth_middleware.py  test_data_purge.py  test_database_ssl.py  test_dcr.py  test_integrity_plugin.py  test_llm_provider.py  test_logging_plugin.py  test_marketplace.py  test_mcp_output_size_guard_plugin.py  test_metrics.py  test_pubsub_auth.py  test_ratelimit.py  test_security_headers.py  test_settings.py  test_settings_scopes.py  test_tools.py  test_usage_plugin.py
tests/shell/: check_coverage.sh  deploy.bats  mock_gcloud.sh
(+204 files in other folders)
