[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightspeed-agent"
version = "0.1.0"
description = "A2A-ready agent for Red Hat Insights using Google ADK"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "Red Hat", email = "insights@redhat.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Shared base dependencies (used by both agent and marketplace handler)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "fastapi>=0.115.0",
    "starlette>=1.3.1",
    "python-multipart>=0.0.31",
    "PyJWT[crypto]>=2.13.0",
    "cryptography>=48.0.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # PostgreSQL drivers
    "asyncpg>=0.29.0",  # Async driver for SQLAlchemy async operations
    "psycopg2-binary>=2.9.0",  # Sync PostgreSQL driver (used by alembic migrations)
    # Google Cloud authentication (ADC for Procurement API calls)
    "google-auth>=2.0.0",
    "requests>=2.20.0",  # Required by google.auth.transport.requests
    # Redis for distributed rate limiting (used by both agent and marketplace handler)
    "redis>=5.0.0",
    # Structured JSON logging with proper value escaping (CWE-117 safe)
    "python-json-logger>=3.0.0",
    # CVE-2026-59885: pyasn1 < 0.6.4 OID decoding quadratic time DoS
    "pyasn1>=0.6.4",
]

[project.optional-dependencies]
agent = [
    # AI/Agent frameworks
    "aiohttp>=3.14.1",
    "google-adk==2.4.0",
    "a2a-sdk[http-server]>=0.3.0,<0.4.0",
    "litellm>=1.83.10,<2.0.0",
    "mcp>=1.0.0",
    # Configuration
    "python-dotenv>=1.2.2",
    # Google Cloud integration
    "google-cloud-service-control>=1.0.0",
    # OpenTelemetry for distributed tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-exporter-prometheus>=0.62b1",
]
telemetry = [
    "opentelemetry-exporter-jaeger>=1.20.0",
    "opentelemetry-exporter-zipkin>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
    "uv>=0.11.0",
    "pip-audit>=2.7.0",
    "pip==26.1.2",
    "msgpack>=1.2.1",
]

[project.scripts]
lightspeed-agent = "lightspeed_agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lightspeed_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
